Updated color function wordcloud.ipynb

--- a/wordcloud.ipynb
+++ b/wordcloud.ipynb
@@ -163,13 +163,13 @@
     "import random\n",
     "\n",
     "#this is optional, i just wanted my wordcloud to be fancy but really no i read that a lavender ribbon symbolises awareness for all cancers or cancers as a whole so i wanted my wordcloud to be in lavender \n",
-    "def lavenderr_colah(word, font_size, position, orientation, random_state=None, **kwargs):\n",
-    "    hue = random.randint(220,245)\n",
-    "    return \"hsl(%d, 100%%, %d%%)\" % (hue, random.randint(20,40))\n",
+    "def lavender_color(word, font_size, position, orientation, random_state=None, **kwargs):\n",
+    "    hue = random.randint(265,280)\n",
+    "    return \"hsl(%d, 100%%, %d%%)\" % (hue, random.randint(50,70))\n",
     "\n",
     "\n",
     "wc_genes= WordCloud(width=1024, height=576, background_color=\"black\").generate(gene_strn)\n",
-    "wc_genes =wc_genes.recolor(color_func=purpul_colah)\n",
+    "wc_genes =wc_genes.recolor(color_func=lavender_color)\n",
     "\n",
     "wc_genes.to_file('wc.png')\n",
     "imgg= Image.open('wc.png')\n",
